various api updates
